# slacktalker

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  dev_requirements.txt  import.py  main.py  make_sentence.py  pylintrc  requirements.txt  setup.cfg  wsgi.py
.dependabot/: config.yml
.github/: dependabot.yml
SlackResurrect/: main.py  make_sentence.py
slack-resurrect/: main.py  make_sentence.py  model.py  test_main.py
slack_resurrect/: __init__.py  main.py  make_sentence.py  model.py  settings.py  test_main.py  test_web.py  web.py
slack_resurrect/static/: humans.txt  style.css
slack_resurrect/templates/: index.html  moo.html
