[aliases]
test=pytest

[metadata]
description-file = README.md

[tool:pytest]
addopts = --durations=10 --cov slack_resurrect --cov-report html --cov-report term-missing -x
env=
    APP_ENV=test

[flake8]
ignore = E501

[bumpversion]
current_version = 0.0.1.dev0
commit = True
tag = True

[bumpversion:file:slack_resurrect/__init__.py]
