[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[aliases]
test = pytest

[metadata]
description-file = README.md

[tool:pytest]
addopts = --durations=10 --cov slack_resurrect --cov-report html --cov-report term-missing -x
env = 
	APP_ENV=test

[flake8]
ignore = E501

[bumpversion:file:slack_resurrect/__init__.py]

