[bumpversion]
current_version = 0.1.3
commit = True
tag = True

[aliases]
test = pytest

[metadata]
description-file = README.md

[tool:pytest]
mocked-sessions = database.db.session
mocked-engines = database.engine
norecursedirs = docs *.egg-info .git .tox .direnv
testpaths = slack_resurrect
env = 
	APP_ENV=test

[flake8]
ignore = E501

[bumpversion:file:slack_resurrect/__init__.py]

